2001-01-31  Akim Demaille  <akim@epita.fr>

	* depend2.am: Instead of replacing @PFX@ in $(@PFX@COMPILE), and
	then replacing `$(@PFX@COMPILE)' for the files that need some
	special flags, use only @COMPILE@.  Similarly for @LTCOMPILE@.
	Try to document this file.
	* automake.in (add_depend2): Adjust to these changes.

2001-01-31  Akim Demaille  <akim@epita.fr>

	* automake.in (%factored_dependencies): New.
	(file_contents): Use it.
	(handle_phony): Rename as...
	(handle_factored_dependencies): this.
	* subdirs.am: No need for convolved syntax to declare .PHONY.

2001-01-31  Akim Demaille  <akim@epita.fr>

	* automake.in: maintainer-check fixes.

2001-01-31  Akim Demaille  <akim@epita.fr>

	* automake.in (file_contents): Rewrite: instead of trying to parse
	it line by line, first swallow it completely into $CONTENTS,
	*then*, parse it *paragraph* by paragraph.

2001-01-30  Akim Demaille  <akim@epita.fr>

	* automake.in (file_contents): Remove.
	(file_contents_with_transform): Swap the order of the arguments,
	and rename as...
	(file_contents): this.
	Adjust all uses.

2001-01-30  Tom Tromey  <tromey@redhat.com>

	* automake.in (scan_one_autoconf_file): Don't mention
	omit_dependencies.

2001-01-29  Akim Demaille  <akim@epita.fr>

	* automake.in (&scan_autoconf_config_files): Extract from
	&scan_one_autoconf_file.
	(&scan_one_autoconf_file): Use it.
	(&scan_autoconf_traces): New.
	($scan_autoconf_files): Use it.

2001-01-29  Akim Demaille  <akim@epita.fr>

	* texinfos.am, tags.am, subdirs.am, multilib.am, mans.am: Add a
	.PHONY target.
	* automake.in (handle_texinfo, handle_man_pages, handle_multilib)
	(handle_etags, handle_subdirs): Don't push into @phony.

2001-01-29  Akim Demaille  <akim@epita.fr>

	* automake.in (scan_one_autoconf_file): Correctly recognize
	configure.ac.

2001-01-29  Akim Demaille  <akim@epita.fr>

	* automake.in (handle_tests_dejagnu): New, extracted from...
	(handle_tests): here.  Use `.PHONY:'.

2001-01-29  Akim Demaille  <akim@epita.fr>
