@@ -3035,13 +3035,13 @@ sub add_depend2
 			       'BASE'      => $obj,
 			       'SOURCE'    => $source)
 		 # Generate rule for `.o'.
-		 . 's/^\@EXT\@\.o:/' . $obj . '.o: ' . $source . '/g;'
+		 . 's/^\@EXT\@\.o:/' . "\Q$obj.o: $source\E" . '/g;'
 		 # Maybe generate rule for `.lo'.  Might be eliminated
 		 # by $XFORM.
-		 . 's/^\@EXT\@\.lo:/' . $obj . '.lo: ' . $source . '/g;'
+		 . 's/^\@EXT\@\.lo:/' . "\Q$obj.lo: $source\E" . '/g;'
 		 # Maybe generate rule for `.obj'.  Might be
 		 # eliminated by $XFORM.
-		 . 's/^\@EXT\@\.obj:/' . $obj . '.obj: ' . $source . '/g;');
+		 . 's/^\@EXT\@\.obj:/' . "\Q$obj.obj: $source\E" . '/g;');
     }
 }
 
