@@ -1,5 +1,9 @@
 2001-01-31  Akim Demaille  <akim@epita.fr>
 
+	* automake.in (add_depend2): Quote properly $obj and $source.
+
+2001-01-31  Akim Demaille  <akim@epita.fr>
+
 	* depend2.am: Instead of replacing @PFX@ in $(@PFX@COMPILE), and
 	then replacing `$(@PFX@COMPILE)' for the files that need some
 	special flags, use only @COMPILE@.  Similarly for @LTCOMPILE@.
